Fix unlinked mentions on mobile

--- a/src/integrations/backlinks.scss
+++ b/src/integrations/backlinks.scss
@@ -1,4 +1,4 @@
-.backlink-pane {
+body:not(.is-mobile) .backlink-pane {
   .search-result-file-match:not(:hover) .search-result-file-match-replace-button {
     display: none;
   }
